--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-body {
-  margin: 0;
-  overflow: hidden;
+*
+{
+    margin: 0;
+    padding: 0;
 }
 
-.controls {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
+html,
+body
+{
+    overflow: hidden;
 }
 
-canvas {
-  position: absolute;
-}
-svg {
-  position: absolute;
-  display: none;
+.webgl
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
 }
